[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-code-review"
version = "1.0.0"
description = "An OpenEnv-compliant code review environment for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "openai",
    "pyyaml",
    "requests",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "httpx",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
